fixed build issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "allowJs": true,
     "experimentalDecorators": true,
     "baseUrl": ".",
-    "outputDir": "./build"
+    "outDir": "./build"
   },
   "compileOnSave": false,
   "include": [
