--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "strongbus",
   "version": "1.0.0",
   "description": "\"Strongly typed, battle-tested event bus\"",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "npm run build && ./node_modules/.bin/jasmine lib/**/*_spec.js",
+    "postinstall": "npm run build"
   },
   "keywords": [
     "bus",
@@ -19,6 +22,9 @@
     "event-emitter"
   ],
   "author": "Ethan Ferrari <github@ethanferrari.io>",
+  "contributors": [
+    "Josh Heyse <josh.heyse@gmail.com>"
+  ],
   "license": "MIT",
   "dependencies": {
     "core-decorators": "^0.20.0",
