--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "version": "3.1.6",
   "compilerOptions": {
-    "sourceMap": true,
+    "sourceMap": false,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "module": "commonjs",
     "target": "es6",
-    "allowJs": true,
     "experimentalDecorators": true,
     "baseUrl": ".",
-    "outDir": "./build"
+    "outDir": "./lib",
+    "declaration": true
   },
   "compileOnSave": false,
   "include": [
