--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "strongbus",
   "version": "1.0.0",
-  "description": "\"Strongly typed, battle-tested event bus\"",
+  "description": "Strongly typed, battle-tested event bus",
+  "keywords": ["Typescript", "MsgBus", "EventEmitter"],
   "main": "lib/index.js",
   "types": "lib/index.d.js",
   "scripts": {
@@ -9,7 +10,10 @@
     "lint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
     "test": "npm run build && ./node_modules/.bin/jasmine lib/**/*_spec.js",
     "validate": "npm run test && npm run lint",
-    "install": "([ -d ./src ] && [ ! -d ./lib ] && mkdir lib && npm install . &&  npm run build) || echo ''"
+    "install": "([ -d ./src ] && [ ! -d ./lib ] && mkdir lib && npm install . &&  npm run build) || echo ''",
+    "prepare": "npm run build",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [
     "bus",
