--- a/package.json
+++ b/package.json
@@ -34,16 +34,14 @@
   "license": "MIT",
   "dependencies": {
     "core-decorators": "^0.20.0",
-    "eventemitter3": "^3.1.0",
-    "lodash": "^4.17.11"
+    "eventemitter3": "^3.1.0"
   },
   "devDependencies": {
     "@types/jasmine": "^3.3.0",
-    "@types/lodash": "^4.14.118",
     "@types/node": "^10.12.10",
     "jasmine": "^3.3.0",
     "tslint": "^5.11.0",
     "typedoc": "^0.14.2",
-    "typescript": "^3.1.6"
+    "typescript": "^4.0.2"
   }
 }
