--- a/package.json
+++ b/package.json
@@ -33,14 +33,13 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "core-decorators": "^0.20.0",
-    "eventemitter3": "^3.1.0"
+    "core-decorators": "^0.20.0"
   },
   "devDependencies": {
     "@types/jasmine": "^3.3.0",
     "@types/node": "^10.17.3",
     "jasmine": "^3.3.0",
-    "tslint": "^5.11.0",
+    "tslint": "^6.1.3",
     "typedoc": "^0.15.0",
     "typescript": "^4.0.2"
   }
