--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "core-decorators": "^0.20.0"
+    "core-decorators": "^0.20.0",
+    "jaasync": "^0.9.1"
   },
   "devDependencies": {
     "@types/jasmine": "^3.3.0",
