--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev": "./node_modules/.bin/tsc -p tsconfig.dev.json",
     "dist": "./node_modules/.bin/tsc -p tsconfig.dist.json",
     "lint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.dev.json",
-    "test": "npm run dev && ./node_modules/.bin/jasmine lib/**/*_spec.js",
+    "test": "npm run dev && jasmine --config=./jasmine.json",
     "validate": "npm run test && npm run lint",
     "install": "([ -d ./src ] && [ ! -d ./lib ] && mkdir lib && npm install . &&  npm run dist) || echo ''",
     "docs": "./node_modules/.bin/typedoc --tsconfig tsconfig.dist.json --out ./docs --theme minimal --mode file --excludePrivate --exclude **/*/utils/*,**/*/utility.ts,**/*spec.ts,**/strongbusLogger.ts ./src/index.ts",
@@ -43,6 +43,7 @@
     "@types/jasmine": "^3.3.0",
     "@types/node": "^10.17.3",
     "jasmine": "^3.3.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "tslint": "^6.1.3",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.3"
