--- a/tsconfig.dist.json
+++ b/tsconfig.dist.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.dev.json",
   "exclude": [
     "./src/**/*_spec.ts",
-    "./src/*_spec.ts"
+    "./src/*_spec.ts",
+    "./src/support/**"
   ]
 }
