--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "license": "MIT",
   "dependencies": {
     "core-decorators": "^0.20.0",
-    "jaasync": "^0.10.1"
+    "jaasync": "^0.11.0"
   },
   "devDependencies": {
     "@types/jasmine": "^3.3.0",
@@ -45,7 +45,7 @@
     "jasmine": "^3.3.0",
     "jasmine-spec-reporter": "^7.0.0",
     "tslint": "^6.1.3",
-    "typedoc": "^0.23.0",
+    "typedoc": "0.23.0-beta.5",
     "typescript": "^4.7.4"
   }
 }
